maze.lessons.maze.island.IslandMaze.scala.error
Escaper:48: error: not found: value north
	if (getDirection==north) {
                          ^